rollout-service-mesh/istio/virtual-service-with-destination-rule/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: canary-demo
