rollout-service-mesh/istio/virtual-service-with-destination-rule/istio-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
spec:
  gateways:
    - istio-rollout-gateway
  hosts:
    - istio-rollout.dev.argoproj.io
  http:
    - route:
      - destination:
          host: stable-svc
          subnet: stableSubnet
        weight: 100
      - destination:
          host: stable-svc
          subnet: canarySubnet
        weight: 0
